--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+.emoji {
+  display: inline-block;
+  width: auto;
+  height: 1em;
+  vertical-align: -0.125em;
+}
